# misc

./: README.md  path_isexec.py
Bicho-0.9.1/Bicho/backends/: jira.py
CVSAnalY-2.1.0/pycvsanaly2/: AsyncQueue.py  Parser.py  ParserFactory.py
RepositoryHandler-0.5/: setup.py
book/algebricgeom/: README.md
book/golang/: main.tex
book/pharaon/: main.tex
book/sympy/: CMakeCache.txt  Makefile  README.md  avant_propos.aux  avant_propos.tex  biblio.bib  biblio.blg  cython.aux  introduction.tex  main.aux  main.bcf  main.blg  main.dvi  main.idx  main.ilg  main.out  main.ptc  main.tex  main.toc  structure.tex
book/sympy/chapter01/: basecalculs.aux  basecalculs.tex  premcalculformal.tex
book/sympy/chapter02/: classic.aux  classic.tex  ensemble.aux  ensemble.tex  formelalgebra.aux  formelalgebra.tex  linearalgebra.tex  polynomes.tex  symbolicdiffequ.tex
book/sympy/chapter03/: convgeometry.aux  convgeometry.tex  diffgeometry.aux  euclid.aux  euclid.tex  geometry.aux  geometry.tex  liegeometry.aux  nonlineaireprob.aux  (+2 more)
code/: nbwquery.go
code/go/: approxpi.go  calfrac.go  goldenratio.go  integrameth.go  limitesuite.go  matrixmake.go  pgcd.go  pkgcopy.go  spheric2cartes.go  stackexample.go  symcompl.go  syracuse.go  tictoc.go  vect.go
code/js/: first.js
code/py/: cartpendulum.py  dynressor.py  getbmwmoto.py  greetpy2.py  greetpy2.py.bak  rmtree3.py  setimage.py  update_pypi.md
code/qt/: goldbach.py  qt_decorator_string.py  qt_spinbox_goldbach.py  qt_spinbox_primer.py  qtnotify.py
code/shell/: shell_param.sh
code/typescript/: helloworld.js  helloworld.ts
config/emacs.d/: init.el
pythonProj3/: portage.md
pythonProj3/Bicho/: bicho.py  pyproject.toml  setup.py
pythonProj3/Bicho-1.1/: bicho  setup.py
pythonProj3/Bicho-2.0/: README.rst  pyproject.toml
pythonProj3/Bicho-2.0.orig/: pyproject.toml
pythonProj3/Bicho-2.0.orig/Bicho/: Config.py  common.py  info.py
pythonProj3/Bicho-2.0.orig/Bicho/backends/: gerrit.py  gitlab.py  jira.py
pythonProj3/Bicho-2.0.orig/Bicho/post_processing/: issues_log_jira.py
pythonProj3/Bicho-2.0/Bicho/: Config.py  common.py  info.py  main.py  utils.py
pythonProj3/Bicho-2.0/Bicho/backends/: __init__.py  bg.py  github.py  github.py.bak  jira.py.bak  lp.py  lp.py.bak  redmine.py  reviewboard.py.bak  sf.py  trac.py.bak
pythonProj3/Bicho-2.0/Bicho/db/: mysql.py
pythonProj3/Bicho-2.0/Bicho/post_processing/: issues_log.py  issues_log_redmine.py  issues_log_trac.py
pythonProj3/Bicho-2.0/doc/: UserManual.txt
pythonProj3/Bicho-2.0/tests/: test_bicho_2_0.py
pythonProj3/CVSAnalY/: pyproject.toml  setup.py
pythonProj3/CVSAnalY-2.0.0/: setup.py
pythonProj3/CVSAnalY-2.1.0/: cvsanaly2
pythonProj3/MailingListStats/: pyproject.toml  setup.py
pythonProj3/MailingListStats-1.0.0/: setup.py
pythonProj3/MailingListStats-2.0.0/: pyproject.toml
pythonProj3/MailingListStats-2.0.0/mailingliststats_2_0_0/: analyzer.py  strictmbox.py
pythonProj3/RepositoryHandler/: README.md  first.py  pyproject.toml  setup.py
pythonProj3/RepositoryHandler-0.5/: setup.py
pythonProj3/RepositoryHandler-1.0/: README.md  ipython_log.py
pythonProj3/STRINGS/: ChangeLog  README  STRINGS.py  run.sh  setup.sh
pythonProj3/STRINGS/STRINGS/: pyproject.toml
pythonProj3/STRINGS/STRINGS/strings/: STRINGS.py
pythonProj3/STRINGS/STRINGS/tests/: test_strings.py
pythonProj3/pkgnote/: README.rst
talks/: README.md
talks/j2ml2018/: main.out  main.tex
talks/j2ml2019/: main.aux  main.nav  main.toc
talks/operatingsystem/: djelfa2018.tar.xz
website/kiaderouiche.github.io/: README.md  TODO.md  index.html
(+524 files in other folders)
