[tool.poetry]
name = "Bicho"
version = "2.0"
description = "Analysis tool for Issue/Bug Tracking Systems"
authors = ["GSyC/LibreSoft, Universidad Rey Juan Carlos"]
homepage = "http://metricsgrimoire.github.io/Bicho/"
license = "GPL-2.0+"
readme = "README.rst"
include = ["CHANGELOG.md", "NEWS.md"]

keywords = ["packaging", "dependency", "poetry"]

classifiers=[
        "Programming Language :: Python",
        "Development Status :: 1 - Planning",
        "License :: OSI Approved",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Communications",
        ]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
launchpadlib = "^1.10.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | __pycache__
)
'''
packages = [
    { include = "Bicho", from="." }
]
[tool.poetry.scripts]
bicho = "bin:bicho"
