[tool.poetry]
name = "MailingListStats"
version = "2.0.0"
description="Mailing lists analysis tool of the Metrics Grimoire suite."
authors = ["Libresoft Research Group"]
homepage ="http://metricsgrimoire.github.io/MailingListStats/"
license = "GPL-2.0+"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
